[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Knife.tscn" type="PackedScene" id=2]
[ext_resource path="res://grass_template2.jpg" type="Texture" id=3]
[ext_resource path="res://Cat.tscn" type="PackedScene" id=4]
[ext_resource path="res://Button.gd" type="Script" id=5]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 356.086, 72.7737, 0, 0, 0, 0, 415.418, 68.8143, 0, 0, 0, 0, 467.333, 67.4945, 0, 0, 0, 0, 548.914, 68.8143, 0, 0, 0, 0, 630.496, 76.7332, 0, 0, 0, 0, 818.38, 253.587, 0, 0, 0, 0, 820.852, 339.374, 0, 0, 0, 0, 686.119, 534.704, 0, 0, 0, 0, 621.843, 551.862, 0, 0, 0, 0, 399.349, 558.461, 0, 0, 0, 0, 143.48, 484.552, 0, 0, 0, 0, 121.23, 363.13, 0, 0, 0, 0, 133.821, 246.988, 0, 0, 0, 0, 355.377, 75.4133 )
}

[node name="Main" type="Node2D"]

position = Vector2( 5.15533, 0.644928 )
scale = Vector2( 1.1611, 1.02015 )
script = ExtResource( 1 )
Knife = ExtResource( 2 )

[node name="grass_template2" type="Sprite" parent="." index="0"]

position = Vector2( 485.154, 336.959 )
scale = Vector2( 1.04303, 1.11319 )
texture = ExtResource( 3 )

[node name="Cat" parent="." index="1" instance=ExtResource( 4 )]

[node name="MobTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="ScoreTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="Position2D" type="Position2D" parent="." index="5"]

position = Vector2( 475.095, 310.144 )

[node name="Button" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 77.0
margin_top = 39.0
margin_right = 221.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
script = ExtResource( 5 )

[node name="MobSpawn" type="Path2D" parent="." index="7"]

position = Vector2( -12.4861, -5.1532 )
scale = Vector2( 1.01533, 1.01038 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobSpawn" index="0"]

position = Vector2( 356.086, 72.7737 )
rotation = -0.0666339
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[connection signal="hit" from="Cat" to="." method="game_over"]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]


